# SimpleStore

./: .gitignore  category-icon.json  famous_brands.json  manage.py  pyproject.toml  requirements.txt
Wolmart/: asgi.py  settings.py  urls.py  wsgi.py
admins/: admin.py  forms.py  models.py  urls.py  views.py
admins/migrations/: 0001_initial.py  0002_alter_vendor_name.py
static/admin/js/: app.js
static/admin/js/pages/: form-advanced.init.js  form-validation.init.js
static/admin/libs/dropzone/min/: dropzone.min.js
static/web/ajax/: login.html
static/web/css/: demo1.min.css  style.min.css
static/web/js/: main.min.js
store/: admin.py  models.py  pagination.py  permissions.py  serializer.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py  0002_alter_product_description.py  0003_comment.py  0004_review_delete_comment.py  0005_images_alter_product_options_remove_product_image_and_more.py  0005_images_remove_product_image_product_images.py  0006_alter_images_image.py  0007_alter_product_options_review_vendor_and_more.py
templates/admin/: add-product.html  admin.html  product-list.html
templates/partials/: comment-section.html
templates/web/: become-a-vendor.html  cart.html  checkout.html  compare.html  demo1.html  error-404.html  faq.html  index.html  login.html  my-account.html  order-view.html  order.html  product-swatch.html  shop.html  vendor-list.html  vendor-store.html  wishlist.html
web/: urls.py  views.py
